<resources>
    <string name="app_name">GuessTheWord</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_ready_text">Get ready to</string>
    <string name="guess_the_word_text">Guess the Word !</string>
    <string name="play">PLAY</string>
    <string name="skip_text">SKIP</string>
    <string name="got_it_text">GOT IT</string>
    <string name="end_game_text">END GAME</string>
    <string name="the_word_is">The word is ..</string>
    <string name="tuna">\"Tuna\"</string>
    <string name="timer">00:00</string>
    <string name="score">Score : 2</string>
    <string name="score_value">40</string>
    <string name="play_again">PLAY AGAIN</string>
    <string name="you_score_text">You Score</string>
</resources>
