<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screen.game.GameFragment">

        <TextView
            android:id="@+id/tv_the_word_is"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16"
            android:layout_marginTop="208dp"
            android:layout_marginEnd="@dimen/_16"
            android:text="@string/the_word_is"
            android:textAlignment="center"
            android:textSize="@dimen/_14f"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_28f"
            android:text="@string/tuna"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_the_word_is"
            app:layout_constraintStart_toStartOf="@+id/tv_the_word_is"
            app:layout_constraintTop_toBottomOf="@+id/tv_the_word_is" />

        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="156dp"
            android:text="@string/timer"
            app:layout_constraintEnd_toEndOf="@+id/tv_the_word_is"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/tv_the_word_is"
            app:layout_constraintTop_toBottomOf="@+id/tv_word" />

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="@+id/tv_the_word_is"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/tv_the_word_is"
            app:layout_constraintTop_toBottomOf="@+id/tv_timer"
            app:layout_constraintVertical_bias="0.131" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/_96" />

        <Button
            android:id="@+id/btn_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip_text"
            app:layout_constraintBottom_toBottomOf="@+id/btn_got_it"
            app:layout_constraintEnd_toStartOf="@+id/btn_got_it"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_got_it" />

        <Button
            android:id="@+id/btn_got_it"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/got_it_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_end_game"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_skip"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <Button
            android:id="@+id/btn_end_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_game_text"
            app:layout_constraintBottom_toBottomOf="@+id/btn_got_it"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_got_it"
            app:layout_constraintTop_toTopOf="@+id/btn_got_it" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
