<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scoreLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screen.score.ScoreFragment">

        <TextView
            android:id="@+id/tv_you_scored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16"
            android:layout_marginTop="172dp"
            android:layout_marginEnd="@dimen/_16"
            android:text="@string/you_score_text"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_score_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/score_value"
            android:textSize="@dimen/_32f"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_you_scored"
            app:layout_constraintStart_toStartOf="@+id/tv_you_scored"
            app:layout_constraintTop_toBottomOf="@+id/tv_you_scored" />

        <Button
            android:id="@+id/btn_next_match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="136dp"
            android:text="@string/play_again"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/tv_you_scored"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/tv_you_scored"
            app:layout_constraintTop_toBottomOf="@+id/tv_score_value" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
