<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screen.title.TitleFragment">

        <TextView
            android:id="@+id/tv_get_ready"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16"
            android:layout_marginTop="212dp"
            android:layout_marginEnd="@dimen/_16"
            android:text="@string/get_ready_text"
            android:textAlignment="center"
            android:textSize="@dimen/_16f"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_guess_the_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/guess_the_word_text"
            android:textSize="@dimen/_32f"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_get_ready"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="@+id/tv_get_ready"
            app:layout_constraintTop_toBottomOf="@+id/tv_get_ready" />

        <Button
            android:id="@+id/btn_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="256dp"
            android:text="@string/play"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_get_ready"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@+id/tv_get_ready"
            app:layout_constraintTop_toBottomOf="@+id/tv_guess_the_word"
            app:layout_constraintVertical_bias="0.853" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
